--- a/Shelter/pages/main/main.css
+++ b/Shelter/pages/main/main.css
@@ -728,6 +728,119 @@ body {
   cursor: pointer;
 }
 
+.modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) scale(0);
+          transform: translate(-50%, -50%) scale(0);
+  -webkit-transition: 200ms ease-in-out;
+  transition: 200ms ease-in-out;
+  z-index: 10;
+}
+
+.modal.active {
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+}
+
+.modal_window {
+  margin-right: 3.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  background: #fafafa;
+  border: none;
+  border-radius: 0.5rem;
+  width: 56.25rem;
+}
+
+.modal_picture {
+  width: 31.25rem;
+  height: 31.25rem;
+}
+
+.modal_picture_pet {
+  width: 100%;
+  height: auto;
+}
+
+.modal_content {
+  width: 22rem;
+  height: 16.5rem;
+  padding: 3.125rem 1.25rem 0 1.82rem;
+  color: #000000;
+}
+
+.modal_title {
+  font-family: Georgia;
+  font-size: 2.2rem;
+  line-height: 130%;
+  letter-spacing: 0.1175rem;
+}
+
+.modal_subtitle {
+  font-family: Georgia;
+  font-size: 1.25rem;
+  line-height: 115%;
+  letter-spacing: 0.03125rem;
+  padding: 1.5rem 0 2rem 0;
+}
+
+.modal_description {
+  font-family: Georgia;
+  font-size: 0.937rem;
+  line-height: 110%;
+  letter-spacing: 0.055rem;
+  padding-bottom: 1rem;
+}
+
+.pet_properties {
+  font-size: 1rem;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+}
+
+.modal_close_button {
+  height: 3.25rem;
+  width: 3.25rem;
+  border: 2px solid #f1cdb3;
+  border-radius: 100%;
+  font-weight: bold;
+  font-size: 2rem;
+  cursor: pointer;
+  background: none;
+}
+
+#overlay {
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(41, 41, 41, 0.6);
+  pointer-events: none;
+}
+
+#overlay.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
 @media only screen and (max-width: 768px) {
   .header {
     top: 1rem;
